# StarTrackerModel

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
startrackermodel/: driver.py
startrackermodel/classes/: arguments.py  attitude.py  component.py  enums.py  environment.py  estimation.py  hardware.py  parameter.py  plotter.py  sensor.py  software.py  starframe.py
startrackermodel/data/: CONSTANTS.py  YBSC.csv  environment.json  hardware.json  sensor.json  software.json
startrackermodel/media/: README.md
startrackermodel/scripts/: composer.py
