[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "startrackermodel"
version = "0.1.0"
authors = [
  { name="Gagandeep Thapar", email='gsthapar@gmail.com'},
]
license = {file = "LICENSE"}
description = "Monte-Carlo based system to estimate star tracker accuracy and precision via error propagation by critically analyzing each step of the measurement process."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPL 3.0",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["dependencies"]

[project.scripts]
driver = "driver:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/gagandeepthapar/StarTrackerModel"
"Bug Tracker" = "https://github.com/gagandeepthapar/StarTrackerModel/issues"

[tool.pylint]
good-names="StarTrackerModel"
